tests/ui/typeck/immutable/as_function_param.sol
contract C {
    function f(uint immutable) public pure {} //~ ERROR: mutability is not allowed here
}
